# prometeu

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md
.github/workflows/: build-llama-cpp.yml
docs/: architecture.md  posts-drafts.md
docs/plans/: 2026-06-16-production-readiness.md
gateway/: allowlist.json  allowlist.py  app.py  catalog.py  config.example.json  pools.py  reciprocity.py  requirements.txt  router.py  sizer.py
mesh/: Cargo.toml
mesh/src/: dial.rs  identity.rs  main.rs  proto.rs  receipts.rs  serve.rs
node/: README.md  install.sh  requirements.txt  uninstall.sh  update.sh
node-agent/: app.py
node/prometeu_node/: inference.py  main.py
node/scripts/: prometeu-node-apply-limits
node/systemd/: prometeu-node.service
node/web/: index.html
scripts/: build-llama-cpp.sh  install-node-agent.sh  install-worker.sh  install.sh  prometeu-pool-watchdog.sh  prove-distribution.sh  validate-public-node-install.sh
scripts/systemd/: llama-rpc.service  llama-server.service  prometeu-gateway.service  prometeu-node-agent.service
tests/: test_allowlist.py  test_gateway_node_control.py  test_node_installer_policy.py  test_node_load_concurrency.py  test_node_preflight_contract.py  test_pools.py  test_reciprocity.py  test_router.py  test_sizer.py  test_validate_public_node_install_script.py
web/: chat.html  dashboard.html  index.html  node.html  prometeu.css
